<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detection.DetectionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/card_view"
            app:layout_constraintStart_toStartOf="@id/card_view">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_card"/>

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/tv_item_title_label"
                android:layout_height="match_parent"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/detection_your_batik"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20dp"
                android:textStyle="bold"
                />

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_top">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <ImageView
                    android:id="@+id/previewImageView"
                    android:layout_width="400dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_place_holder" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/cameraButton"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/camera"
            app:layout_constraintEnd_toStartOf="@id/galleryButton"
            app:layout_constraintStart_toStartOf="@id/card_view"
            app:layout_constraintTop_toBottomOf="@id/card_view" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:text="@string/gallery"
            app:layout_constraintEnd_toEndOf="@+id/card_view"
            app:layout_constraintStart_toEndOf="@id/cameraButton"
            app:layout_constraintTop_toBottomOf="@id/card_view" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/detection"
            app:layout_constraintEnd_toEndOf="@id/galleryButton"
            app:layout_constraintStart_toStartOf="@id/cameraButton"
            app:layout_constraintTop_toBottomOf="@+id/cameraButton" />


        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/deskripsi"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/galleryButton"
            app:layout_constraintStart_toStartOf="@id/cameraButton"
            app:layout_constraintTop_toBottomOf="@id/uploadButton" />

        <androidx.cardview.widget.CardView
            android:id="@+id/resultCardView"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="@id/uploadButton"
            app:layout_constraintStart_toStartOf="@id/uploadButton"
            app:layout_constraintTop_toBottomOf="@id/tv_description">

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/result"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_accuracy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/accuracy"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/resultCardView"
            app:layout_constraintStart_toStartOf="@id/resultCardView"
            app:layout_constraintTop_toBottomOf="@+id/resultCardView" />


        <TextView
            android:id="@+id/tv_detail_desc_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/detail_desc"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_accuracy" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_desc_label">

            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:justificationMode="inter_word"
                android:textSize="14sp"
                android:visibility="gone"
                tools:text="@string/deskripsi" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_more_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/more_detail_batik"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/card_view_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>